@@ -13,22 +13,22 @@
 
     <em:homepageURL>http://mono-project.com/Moonlight</em:homepageURL>
     <em:creator>Mono Team</em:creator>
-    <em:contributor>Chris Toshok</em:contributor>
-    <em:contributor>Geoff Norton</em:contributor>
-    <em:contributor>Larry Ewing</em:contributor>
-    <em:contributor>Jeff Stedfast</em:contributor>
-    <em:contributor>Miguel de Icaza</em:contributor>
-    <em:contributor>Jackson Harper</em:contributor>
-    <em:contributor>Fernando Herrera</em:contributor>
-    <em:contributor>Sebastien Pouliot</em:contributor>
-    <em:contributor>JB Evain</em:contributor>
-    <em:contributor>Rolf Kvinge</em:contributor>
-    <em:contributor>Michael Kostrzewa</em:contributor>
-    <em:contributor>Alan McGovern</em:contributor>
-    <em:contributor>Andreia Gaita</em:contributor>
-    <em:contributor>Stephane Delcroix</em:contributor>
-    <em:contributor>Rusty Howell</em:contributor>
-    <em:contributor>Andrew Jorgensen</em:contributor>
+    <em:developer>Chris Toshok</em:developer>
+    <em:developer>Geoff Norton</em:developer>
+    <em:developer>Larry Ewing</em:developer>
+    <em:developer>Jeff Stedfast</em:developer>
+    <em:developer>Miguel de Icaza</em:developer>
+    <em:developer>Jackson Harper</em:developer>
+    <em:developer>Fernando Herrera</em:developer>
+    <em:developer>Sebastien Pouliot</em:developer>
+    <em:developer>JB Evain</em:developer>
+    <em:developer>Rolf Kvinge</em:developer>
+    <em:developer>Michael Kostrzewa</em:developer>
+    <em:developer>Alan McGovern</em:developer>
+    <em:developer>Andreia Gaita</em:developer>
+    <em:developer>Stephane Delcroix</em:developer>
+    <em:developer>Rusty Howell</em:developer>
+    <em:developer>Andrew Jorgensen</em:developer>
 
     <em:targetPlatform>@TARGET_PLATFORM@</em:targetPlatform>
     <em:targetApplication> <!-- Firefox -->
